
* …

=== New developer features in 1.43 ===

* StatusValue class gained new method getMessages(): MessageSpecifier[],
  allowing the errors to be inspected and displayed more easily, for example:
    foreach ( $status->getMessages() as $msg ) {
      if ( $msg->getKey() !== 'ignored-message' ) {
        $this->getOutput()->addWikiMsg( $msg );
      }
    }
* …

=== External library changes in 1.43 ===

* The OOjs Router library has been merged into core and will be archived
  upstream.

==== New external libraries ====

* …

===== New development-only external libraries =====

* …

==== Changed external libraries ====
* Updated codex, codex-design-tokens and codex-icons
  from v1.3.6 to v1.5.0.
* Updated guzzlehttp/guzzle from 7.7.1 to 7.8.1.
* Updated pear/net_smtp from 1.11.1 to 1.12.1.
* Updated monolog/monolog from 2.9.2 to 2.9.3.
* Updated symfony/yaml from 5.4.35 to 5.4.39.
* …

===== Changed development-only external libraries =====

* Upgraded eslint-config-wikimedia from 0.26.0 to 0.27.0.
* Updated seld/jsonlint from 1.10.1 to 1.10.2.
* Updated doctrine/dbal from 3.7.2 to 3.8.4.
* Updated phpunit/phpunit from 9.6.16 to 9.6.19.
* …

==== Removed external libraries ====

* …

=== Bug fixes in 1.43 ===

* …

=== Action API changes in 1.43 ===

* …

=== Action API internal changes in 1.43 ===

* …

=== Languages updated in 1.43 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* (T290657) Added language support for Levantine Arabic (apc).
* …

=== Breaking changes in 1.43 ===

* ErrorPageError public properties 'msg' and 'title' may now contain
  any MessageSpecifier object, not just Message.
* Reset button functionality suppressReset() and $mShowReset from HTMLForm
  was removed without replacement.
* UserGroupMembership::getGroupName(), deprecated in 1.38, and